<resources>
    <string name="app_name" translatable="false">Buy Data Pack</string>
    <string name="error_invalid_number">This number is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="phone_number">Phone Number</string>
    <string name="password">Password</string>
    <string name="remember_me">Save number &amp; password</string>
    <string name="login">Login</string>
    <string name="settings">Settings</string>
    <string name="theme_summary">Choose application theme.</string>
    <string name="choose_theme">Choose theme</string>
    <string name="success">success</string>
    <string name="buy_pack_cancelled">Buy pack was cancelled</string>
    <string name="maintenance_msg">server is currently unavailable for a planned maintenance. please try again later.</string>
    <string name="down_msg">airtel data pack server down. please try again later.</string>
    <string name="login_success">Login success</string>
    <string name="trying_login">Trying to login</string>
    <string name="retrieving_pack">Retrieving data packages</string>
    <string name="package_title">Package</string>
    <string name="confirm_pkg">Confirm Data Package</string>
    <string name="cancel">Cancel</string>
    <string name="select_pack">Select Pack</string>
    <string name="ok">OK</string>
    <string name="about">About</string>
    <string name="update">Update</string>
    <string name="change_lang">Change Language</string>
    <string name="change_lang_msg">Change application language.</string>
    <string name="buy_times">Buy Times</string>
    <string name="buy_times_msg">How many times do you want to buy this pack?</string>
    <string name="auto_update_msg">Since this app is not available on playstore, you can miss an important update</string>
    <string name="auto_update">Check update on startup</string>
    <string name="login_failed">Login Failed</string>
    <string name="buying_pack">Buying Pack</string>
    <string name="please_wait">Please wait</string>
    <string name="done">Done</string>
    <string name="update_msg">Checking for available update</string>
    <string name="hide">Hide</string>
    <string name="exit">EXIT</string>
    <string name="connect_problem_msg">Connection problem.\nPlease, check that your data connection is ON. This app requires working internet connection to buy data pack.\nOtherwise, use USSD code.</string>
    <string name="comfirm_msg">
        <![CDATA[
            Pack: <b>%1$s</b><br/>Buy times: <b>%2$d</b><br/>Total cost: <b>%3$sTK</b>
        ]]>
    </string>
    <string name="trying_to_buy">\n\ntrying to buy pack no. %d\n</string>
    <string name="waiting_for_sms">\nwaiting for SMS…\n</string>
    <string name="requesting_to_buy">secret found: requesting to buy the pack\n</string>
    <string name="secret_sent">status: secret sent</string>
    <string name="wrong_secret">status: wrong secret</string>
    <string name="status_success">status: success</string>
    <string name="trying_auto_login">Trying to use auto login system</string>
    <string name="login_number_password">Login with Number And Password</string>
    <string name="try_auto_login">Try Auto Login</string>
    <string name="registration">Registration</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="back">Back</string>
    <string name="auto_login_failed_msg">Possible Reason:\n
        1. Server temporary down.\n
        2. You don\'t have an account.\n
        3. You haven\'t enable data on Airtel.\n
        please, try login using number and password.</string>
    <string name="failed_to_buy_msg">\nFailed: waiting for 10 seconds to avoid misbehave</string>
    <string name="buy_data_pack">Buy Data Pack</string>
    <string name="home">Home</string>
    <string name="menu_items">Menu Items</string>
    <string name="logout">Logout</string>
    <string name="logout_description">Logout from this app</string>
    <string name="airtel" translatable="false">Airtel</string>
    <string name="getting_ac_balance_msg">Getting account balance</string>
    <string name="get_data_balance_msg">Getting data balance</string>
    <string name="getting_rewards_msg">Getting available offer</string>
    <string name="offer">Offer</string>
    <string name="data_balance">Data Balance</string>
    <string name="ac_balance">Account Balance</string>
    <string name="show_ac_balance_msg">
        <![CDATA[
            Balance: <b>%1$s</b>
            <br/>
            Last Recharge: <b>%2$s</b>
            <br/>
            Last Recharge Date: <b>%3$s</b>
        ]]>
    </string>
    <string name="data_balance_tmpl">
        <![CDATA[
            Pack: <b>%1$s</b>
            <br/>
            Remaining Volume: <b>%2$s</b>
            <br/>
            Expiry Time: <b>%3$s</b>
            <br/>
            <br/>
        ]]>
    </string>
    <string name="usage_history">Usage History</string>
    <string name="usage_history_msg">Getting usage history</string>
    <string name="usage_html" translatable="false">
        <![CDATA[
            <html>
            <body>
                <table border="1" style="border-collapse:collapse;text-align:center;">
                <thead style="background-color:#2e7d32;">
                  <tr>
                     <td>Type</td>
                     <td>Date</td>
                     <td>Mode</td>
                     <td>Description</td>
                     <td>Charged</td>
                     <td>Volume</td>
                     <td>After Balance</td>
                  </tr>
                  </thead>
                    <tbody>%1$s</tbody>
                </table>
            </body>
            </html>
        ]]>
    </string>
    <string name="sms_permisssion">SMS Permission</string>
    <string name="sms_permission_msg">You must grant SMS permission to use this app. SMS permission is required to auto fill secret codes.</string>
    <string name="no_pack_msg"><![CDATA[<i>No Pack available.<i><br/><i>Please try again later.<i>]]></string>
    <string name="connection_failed">Connection Failed</string>
    <string name="server_overloaded_msg">The server is overloaded and can\'t respond.\nOr, your data connection is not working.</string>
    <string name="auto_login_failed">Auto Login Failed</string>
    <string name="no_data_msg">The server didn\'t return any data. Please try again</string>
</resources>
