<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.github.quadtriangle.buydatapack.MainActivity">

    <include layout="@layout/toolbar" />

    <include
        android:id="@+id/usage_view"
        layout="@layout/usage_wv_layout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar" />

    <android.support.constraint.ConstraintLayout
        android:id="@+id/main_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar" >

        <Button
            android:id="@+id/buydatapack_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onBuyDataPackBtn"
            android:text="@string/buy_data_pack"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/rewards_btn"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/rewards_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onRewardsBtn"
            android:text="@string/offer"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/account_balance_btn"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/account_balance_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onAccountBalanceBtn"
            android:text="@string/ac_balance"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/data_balance_btn"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/data_balance_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onDataBalanceBtn"
            android:text="@string/data_balance"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/usage_history_btn"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/usage_history_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onUsageHistoryBtn"
            android:text="@string/usage_history"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />
    </android.support.constraint.ConstraintLayout>

</android.support.constraint.ConstraintLayout>
